tests/baselines/reference/constructorStaticParamNameErrors.errors.txt
==== tests/cases/compiler/constructorStaticParamNameErrors.ts (1 errors) ====
    'use strict'
    // static as constructor parameter name should give error if 'use strict'
    class test {
        constructor (static) { }
                           ~
!!! constructorStaticParamNameErrors.ts(4,24): error TS1003: Identifier expected.
    }